fix nav title alignment

--- a/application/frontend/src/css/Navbar.css
+++ b/application/frontend/src/css/Navbar.css
@@ -11,7 +11,20 @@
   text-align: center;
 }
 
-.navbar > a {
+.navbar-component {
+  display: flex;
+  flex-basis: calc(50% - 108px);
+}
+
+.navbar-component-left {
+  justify-content: flex-start;
+}
+
+.navbar-component-right {
+  justify-content: flex-end;
+}
+
+.navbar-component > a {
   color: black;
   background: #edcdbb;
   text-align: center;
@@ -20,13 +33,18 @@
   font-size: 20px;
   transition: color 0.3s, background-color 0.3s, transform 0.3s;
   border-radius: 10px;
+  white-space: nowrap;
 }
 
-.navbar > a:hover,
-.navbar > a:focus {
+.navbar-component > a:hover,
+.navbar-component > a:focus {
   background: #e3b7a0;
   transform: scale(0.90);
   border-radius: 10px;
+}
+
+.navbar-header {
+  flex-basis: 216px;
 }
 
 .navbar-header > a {
